--- a/usaproxyFork/pom.xml
+++ b/usaproxyFork/pom.xml
@@ -35,6 +35,16 @@
      			<outputDirectory>${basedir}/target</outputDirectory>
      		</configuration>
      	</plugin>
+     	
+     	<plugin>
+     	<artifactId>maven-compiler-plugin</artifactId>
+     	<version>2.0.2</version>
+    	<configuration>
+        	<source>1.6</source>
+            <target>1.6</target>
+            <sourceDirectory>src</sourceDirectory>
+       	</configuration>
+       </plugin>
   	</plugins>
   </build>
 </project>
