--- a/usaproxyFork/pom.xml
+++ b/usaproxyFork/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>fi.uta.infim</groupId>
   <artifactId>usaproxyFork</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
 
   <name>usaproxyFork</name>
@@ -20,6 +20,7 @@
   			<groupId>org.apache.maven.plugins</groupId>
          	<artifactId>maven-jar-plugin</artifactId>
          	<configuration>
+         		<finalName>usaproxyFork</finalName>
          		<archive>
          			<manifest>
            				<mainClass>fi.uta.infim.usaproxyFork.UsaProxy</mainClass>
