--- a/usaproxyFork/pom.xml
+++ b/usaproxyFork/pom.xml
@@ -15,6 +15,15 @@
   </properties>
   
   <build>
+  	<resources>
+  		<resource>
+  			<directory>src/main/resources</directory>
+  			<excludes>
+  				<exclude>**/.gitignore</exclude>
+  			</excludes>
+  		</resource>
+  	</resources>
+  
   	<plugins>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
@@ -34,6 +43,7 @@
      		<artifactId>maven-resources-plugin</artifactId>
      		<configuration>
      			<outputDirectory>${basedir}/target</outputDirectory>
+     			<includeEmptyDirs>true</includeEmptyDirs>
      		</configuration>
      	</plugin>
      	
