--- a/usaproxyreportgenerator/pom.xml
+++ b/usaproxyreportgenerator/pom.xml
@@ -15,6 +15,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+	 <groupId>commons-cli</groupId>
+	 <artifactId>commons-cli</artifactId>
+ 	 <version>1.2</version>
+	</dependency>
   	<dependency>
   		<groupId>fi.uta.infim</groupId>
   		<artifactId>usaproxylogparser</artifactId>
