--- a/usaproxyFork/pom.xml
+++ b/usaproxyFork/pom.xml
@@ -56,6 +56,26 @@
             <sourceDirectory>src</sourceDirectory>
        	</configuration>
        </plugin>
+       
+       <!-- Binary packaging in 'package' phase -->
+       <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <descriptors>
+            <descriptor>src/main/assembly/assembly.xml</descriptor>
+          </descriptors>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+       </plugin>
   	</plugins>
   </build>
 </project>
