--- a/UsaProxyLogParser/pom.xml
+++ b/UsaProxyLogParser/pom.xml
@@ -86,6 +86,26 @@
         		</executions>
       		</plugin>
 
+			<!-- Binary packaging in 'package' phase -->
+       		<plugin>
+        		<artifactId>maven-assembly-plugin</artifactId>
+        		<version>2.3</version>
+        		<configuration>
+          			<descriptors>
+            			<descriptor>assembly.xml</descriptor>
+          			</descriptors>
+        		</configuration>
+        		<executions>
+          			<execution>
+            			<id>make-assembly</id>
+            			<phase>package</phase>
+            			<goals>
+              				<goal>single</goal>
+            			</goals>
+          			</execution>
+        		</executions>
+       		</plugin>
+
         </plugins>
         
         <!-- m2e ignore for copy-dependencies -->
