--- a/usaproxyreportgenerator/pom.xml
+++ b/usaproxyreportgenerator/pom.xml
@@ -133,6 +133,26 @@
           			</execution>
         		</executions>
       		</plugin>
+      		
+      		<!-- Binary packaging in 'package' phase -->
+       		<plugin>
+        		<artifactId>maven-assembly-plugin</artifactId>
+        		<version>2.3</version>
+        		<configuration>
+          			<descriptors>
+            			<descriptor>assembly.xml</descriptor>
+          			</descriptors>
+        		</configuration>
+        		<executions>
+          			<execution>
+            			<id>make-assembly</id>
+            			<phase>package</phase>
+            			<goals>
+              				<goal>single</goal>
+            			</goals>
+          			</execution>
+        		</executions>
+       		</plugin>
         </plugins>
         
         <pluginManagement>
