--- a/usaproxyreportgenerator/pom.xml
+++ b/usaproxyreportgenerator/pom.xml
@@ -90,6 +90,7 @@
   									<directory>src/main/resources</directory>
   									<includes>
   										<include>**/*.js</include>
+  										<include>**/*.css</include>
   									</includes>
   								</resource>
   							</resources>        
