--- a/usaproxyreportgenerator/pom.xml
+++ b/usaproxyreportgenerator/pom.xml
@@ -91,6 +91,7 @@
   									<includes>
   										<include>**/*.js</include>
   										<include>**/*.css</include>
+  										<include>**/*.png</include>
   									</includes>
   								</resource>
   							</resources>        
