--- a/usaproxyreportgenerator/pom.xml
+++ b/usaproxyreportgenerator/pom.xml
@@ -104,6 +104,7 @@
          		<groupId>org.apache.maven.plugins</groupId>
          		<artifactId>maven-jar-plugin</artifactId>
          		<configuration>
+         			<finalName>usaproxyreportgenerator</finalName>
        				<archive>
          				<manifest>
          					<addClasspath>true</addClasspath>
