--- a/UsaProxyLogParser/pom.xml
+++ b/UsaProxyLogParser/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>fi.uta.infim</groupId>
     <artifactId>usaproxylogparser</artifactId>
-    <name>ANTLR3 project: UsaProxyLogParser</name>
+    <name>UsaProxyLogParser</name>
     <version>0.0.1</version>
 
     <packaging>jar</packaging>
@@ -106,6 +106,25 @@
         		</executions>
        		</plugin>
 
+			<!-- Javadocs -->
+			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-javadoc-plugin</artifactId>
+        		<version>2.8.1</version>
+        		<executions>
+                    <execution>
+                    	<phase>package</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                <!-- exclude antlr package -->
+                <excludePackageNames>fi.uta.infim.usaproxylogparser.antlr:fi.uta.infim.usaproxylogparser.jaxb</excludePackageNames>
+                </configuration>
+      		</plugin>
+
         </plugins>
         
         <!-- m2e ignore for copy-dependencies -->
@@ -138,5 +157,5 @@
      		</plugins>
    		</pluginManagement>
     </build>
-
+  
 </project>
