--- a/UsaProxyLogParser/pom.xml
+++ b/UsaProxyLogParser/pom.xml
@@ -22,9 +22,27 @@
 
     <build>
 
+		<resources>
+  			<resource>
+  				<directory>src/main/resources</directory>
+	  			<excludes>
+	  				<exclude>**/.gitignore</exclude>
+	  			</excludes>
+	  		</resource>
+	  	</resources>
+
         <defaultGoal>install</defaultGoal>
 
         <plugins>
+
+			<plugin>
+	     		<groupId>org.apache.maven.plugins</groupId>
+	     		<artifactId>maven-resources-plugin</artifactId>
+	     		<configuration>
+	     			<outputDirectory>${basedir}/target</outputDirectory>
+	     			<includeEmptyDirs>true</includeEmptyDirs>
+	     		</configuration>
+	     	</plugin>
 
             <plugin>
                 <groupId>org.antlr</groupId>
@@ -113,15 +131,17 @@
         		<version>2.8.1</version>
         		<executions>
                     <execution>
-                    	<phase>package</phase>
+                    	<phase>prepare-package</phase>
                         <goals>
                             <goal>javadoc</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                <!-- exclude antlr package -->
+                <!-- exclude antlr and jaxb packages -->
                 <excludePackageNames>fi.uta.infim.usaproxylogparser.antlr:fi.uta.infim.usaproxylogparser.jaxb</excludePackageNames>
+                <outputDirectory>${project.build.directory}/apidocs</outputDirectory>
+               <reportOutputDirectory>${project.build.directory}/apidocs</reportOutputDirectory>
                 </configuration>
       		</plugin>
 
