--- a/usaproxyreportgenerator/pom.xml
+++ b/usaproxyreportgenerator/pom.xml
@@ -43,9 +43,9 @@
 		<version>1.2.1</version>
 	</dependency>
 	<dependency>
-		<groupId>xalan</groupId>
-		<artifactId>xalan</artifactId>
-		<version>2.7.1</version>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-core</artifactId>
+		<version>3.1.1.RELEASE</version>
 	</dependency>
   </dependencies>
   
