--- a/UsaProxyLogParser/pom.xml
+++ b/UsaProxyLogParser/pom.xml
@@ -18,6 +18,18 @@
             <scope>compile</scope>
         </dependency>
         
+        <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>3.1.1.RELEASE</version>
+		</dependency>
+        
+       <dependency>
+			<groupId>org.ccil.cowan.tagsoup</groupId>
+			<artifactId>tagsoup</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		
     </dependencies>
 
     <build>
