Switching version to 0.0.2-SNAPSHOT

--- a/UsaProxyLogParser/pom.xml
+++ b/UsaProxyLogParser/pom.xml
@@ -5,7 +5,7 @@
     <groupId>fi.uta.infim</groupId>
     <artifactId>usaproxylogparser</artifactId>
     <name>UsaProxyLogParser</name>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
