--- a/usaproxyFork/pom.xml
+++ b/usaproxyFork/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>fi.uta.infim</groupId>
   <artifactId>usaproxyFork</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>usaproxyFork</name>
