fix urls in pom.xml to point to github

--- a/UsaProxyLogParser/pom.xml
+++ b/UsaProxyLogParser/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>usaproxylogparser</artifactId>
     <name>UsaProxyLogParser</name>
     <version>0.0.2-SNAPSHOT</version>
+    <url>https://github.com/borc/usaproxy-tools</url>
 
     <packaging>jar</packaging>
 
