--- a/usaproxyFork/pom.xml
+++ b/usaproxyFork/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
 
   <name>usaproxyFork</name>
-  <url>http://maven.apache.org</url>
+  <url>http://github.com/borc/usaproxy-tools</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
