--- a/usaproxylogdb/pom.xml
+++ b/usaproxylogdb/pom.xml
@@ -121,6 +121,25 @@
           			</execution>
         		</executions>
       	</plugin>
+      	
+      	<plugin>
+        	<artifactId>maven-assembly-plugin</artifactId>
+        	<version>2.3</version>
+        	<configuration>
+          		<descriptors>
+            		<descriptor>assembly.xml</descriptor>
+          		</descriptors>
+        	</configuration>
+        	<executions>
+          		<execution>
+            		<id>make-assembly</id>
+            		<phase>package</phase>
+            		<goals>
+             			<goal>single</goal>
+            		</goals>
+          		</execution>
+        	</executions>
+       	</plugin>
   	</plugins>
   	
   	<pluginManagement>
