--- a/usaproxyreportgenerator/pom.xml
+++ b/usaproxyreportgenerator/pom.xml
@@ -37,6 +37,11 @@
   		<!-- Latest 2.3.x (not 2.4.x), at least 2.3.18 -->
   		<version>[2.3.18,2.4)</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>1.3.2</version>
+	</dependency>
   </dependencies>
   
   <build>
@@ -84,28 +89,59 @@
   										<include>**/*.png</include>
   										<include>readme.txt</include>
   										<include>gpl.txt</include>
+  										<include>plugins/**</include>
   									</includes>
   								</resource>
   							</resources>        
+  							<includeEmptyDirs>true</includeEmptyDirs>
             			</configuration>            
           			</execution>
         		</executions>
       		</plugin>
-                        
-            <plugin>
-         		<groupId>org.apache.maven.plugins</groupId>
-         		<artifactId>maven-jar-plugin</artifactId>
-         		<configuration>
-         			<finalName>usaproxyreportgenerator</finalName>
-       				<archive>
-         				<manifest>
-         					<addClasspath>true</addClasspath>
-         					<classpathPrefix>lib/</classpathPrefix>
-           					<mainClass>fi.uta.infim.usaproxyreportgenerator.App</mainClass>
-         				</manifest>
-       				</archive>
-         		</configuration>
-     		</plugin>
+            
+            <!-- Monocle data provider jar -->
+     		<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-jar-plugin</artifactId>
+        		<version>2.4</version>
+        		<executions>
+          			<execution>
+          				<id>monocledataprovider</id>
+            			<phase>package</phase>
+            			<goals>
+              				<goal>jar</goal>
+            			</goals>
+            			<configuration>
+              				<classifier>monocledataprovider</classifier>
+              				<includes>
+                				<include>**/MonocleDataProvider*.class</include>
+              				</includes>
+              				<outputDirectory>${project.build.directory}/plugins</outputDirectory>
+            			</configuration>
+          			</execution>
+          			<execution>
+          				<id>default-jar</id>
+          				<phase>package</phase>
+          				<goals>
+          					<goal>jar</goal>
+          				</goals>
+          				<configuration>
+		        			<excludes>
+		        				<!-- The monocle data provider will be packaged separately -->
+		        				<exclude>**/MonocleDataProvider*.class</exclude>
+		        			</excludes>
+		         			<finalName>usaproxyreportgenerator</finalName>
+		       				<archive>
+		         				<manifest>
+		         					<addClasspath>true</addClasspath>
+		         					<classpathPrefix>lib/</classpathPrefix>
+		           					<mainClass>fi.uta.infim.usaproxyreportgenerator.App</mainClass>
+		         				</manifest>
+		       				</archive>
+		         		</configuration>
+          			</execution>
+        		</executions>
+      		</plugin>
      		
      		<!-- Dependencies to target/lib/ -->
      		<plugin>
